Added DefCamp CTF participation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <p>Layzix: interested in crypto, stegano, programming</p>
     <p>rootcan: interested in web, network security and programming</p>
     <p>Triw: interested in crypto</p>
+
+    <br />
+    <h3>List of CTFs we participated in:</h3>
+    <ul>
+      <li>
+        <a
+          href="https://def.camp/competitions/defcamp-capture-the-flag-d-ctf-at-the-hacking-village/"
+          target="_blank"
+          >DefCamp 2024 (online CTF)</a
+        >
+      </li>
+    </ul>
   </body>
   <footer>
     <br />
